Fixed broken samples, added z-index to main nav

--- a/scss/components/header/navigation/_main-nav.scss
+++ b/scss/components/header/navigation/_main-nav.scss
@@ -7,6 +7,7 @@
     padding: 0px;
     position: relative;
     cursor: pointer;
+    z-index: 1;
 
     .main-site-nav {
         ul {
